--- a/css/main.css
+++ b/css/main.css
@@ -95,34 +95,315 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-.container {
-    width: 960px;
-    position: relative;
-    margin: auto;
-    background: #eee;
+body {
+  background: #ffffee;
+  color: #111111;
 }
 
-.nav-main {
-    background: #ddd;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.block {
+  font-size: 1rem;
+  width: 100%;
+  display: inline-block;
+}
+
+.col_1 {
+  width: 225px; 
+}
+
+.col_2 {
+  width: 462px;
+}
+
+.col_3 {
+  width: 699px;
+}
+
+.col_4 {
+  width: 936px;
+}
+
+.col_1, .col_2, .col_3, .col_4 {
+  padding: 6px;
+}
+
+.col_1,
+.col_2,
+.col_3,
+.col_4 div{
+  display: inline-block;
+}
+
+.left_col {
+  width: 50%;
+  display: inline-block;
+}
+
+.img_col_2 {
+  width: 462px;
+  height: 462px;
+  background: rgba(204,204,115,0.15);
+}
+
+.right_col {
+  width: 50%;
+  display: inline-block;
+}
+
+.container {
+  font-size: 0;
+  width: 960px;
+  position: relative;
+  margin: auto;
+  font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+/*  color: #99cc66;*/
+}
+
+h3 {
+  font-weight: 300;
+  font-size: 1.5em;
+  color: #33cccc;
+}
+
+h3 a {
+  color: #33cccc;
+}
+
+img {
+  width: 100%;
+}
+
+.box {
+  padding: 6px;
+/*  width: 960px;*/
+}
+
+.no_padding {
+  padding: 0 !important;
+}
+
+header {
+  
+}
+
+header h1 {
+  line-height: 100%;
+  color: #333399;
+}
+
+.nav_main {
+  padding-bottom: 20px;
+  padding-top: 20px;
+  margin-bottom: 10px;
+}
+
+.nav_main a {
+  color: #333399;
+}
+
+nav a {
+  text-decoration: none;
+  padding-right: 20px;
+  color: #66cccc;
+}
+
+.nav_main {
+
 }
 
 .body {
-    background: #ccc;
+  display: inline-block;
 }
 
-.footer {
-    background: #ddd;
+.body div {
+  display: inline-block;
+  vertical-align: top;
 }
 
+section {
+  padding-bottom: 30px;
+}
 
+.intro_text {
+  
+}
 
+p {
+  padding-bottom: 20px;
+}
 
+.graph_container {
+  text-align: center;
+  display: inline-block;
+  text-transform: uppercase;
+}
 
+.graph_legend {
+  background: rgba(204,204,115,0.15);
+/*  border-radius: 8px;*/
+/*  border: rgba(192,192,192,0.2) 4px solid;
+  padding: 2px !important;*/
+}
 
+.graph_legend h4{
+  padding-top: 10px;
+}
 
+.city_graph h4{
+  text-align: center;
+  padding-top: 10px;
+  color: #333399;
+}
 
+.city_graph a{
+  text-decoration: none;
+  color: #111;
+  text-align: center;
+}
 
+.img_col_1 {
+  width: 226px;
+}
+
+.findings_text {
+  margin: auto;
+}
+
+.findings_text div{
+  margin-left: 115px;
+  width: 699px;
+}
+
+/*--*/
+
+.section_title p {
+  padding-bottom: 0;
+}
+
+.section_title > *{
+  vertical-align: bottom !important;
+  bottom: 0;
+}
+
+.us_map {
+  width: 462px;
+}
+
+.city_us_map {
+  width: 226px;
+}
+
+.base_chart, .us_avg_chart {
+  position: absolute;
+  left: 12px;
+  width: 226px;
+}
+
+.base_chart {
+  z-index: -20;
+}
+
+.chart_under {
+  z-index: -10;
+}
+
+.chart_over {
+  z-index: 10;
+}
+
+table {
+  text-align: left;
+}
+
+td {
+  padding-bottom: 8px;
+  line-height: 1;
+  vertical-align: top;
+}
+
+th {
+  padding-bottom: 4px;
+}
+
+.bottom_links {
+
+}
+
+.bottom_links li {
+  list-style: none;
+}
+
+.bottom_links li a {
+  text-decoration: none;
+  color: #333399;
+}
+
+/*- MEASURES PAGE -*/
+.measures_subnav {
+  position: fixed;
+  background: rgba(204,204,115,0.15);
+  width: 210px;
+/*  border-radius: 8px;*/
+}
+
+.measures_subnav a {
+  color: #333399;
+}
+
+#col_3_right {
+  margin-left: 237px;
+  width: 711px;
+}
+
+a {
+  color: #99cc66;
+  text-decoration: none;
+}
+
+/* TWEAK CHARTIST BAR GRAPH */
+
+/*- ABOUT PAGE -*/
+ol, ul {
+  margin-left: 40px;
+}
+
+.endnotes {
+  color: #66cccc;
+  text-decoration: none;
+}
+
+.endnotes_section div .endnotes_list> * {
+  font-size: 0.8em;
+}
+
+.endnotes_list {
+  margin-left: 40px;
+}
+
+.endnotes_list a {
+  color: #111111;
+}
+
+/*-FOOTER-*/
+
+footer {
+  margin-bottom: 20px;
+}
+
+footer > * {
+  vertical-align: top;
+}
+
+footer .copyright p {
+  font-size: 0.813em;
+}
 
 
 
@@ -137,7 +418,7 @@ textarea {
  */
 
 .hidden {
-    display: none !important;
+  display: none !important;
 }
 
 /*
@@ -146,14 +427,14 @@ textarea {
  */
 
 .visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 
 /*
@@ -164,12 +445,12 @@ textarea {
 
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto;
 }
 
 /*
@@ -177,7 +458,7 @@ textarea {
  */
 
 .invisible {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 /*
@@ -194,12 +475,12 @@ textarea {
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+  content: " "; /* 1 */
+  display: table; /* 2 */
 }
 
 .clearfix:after {
-    clear: both;
+  clear: both;
 }
 
 /* ==========================================================================
