--- a/css/_chartist-settings.scss
+++ b/css/_chartist-settings.scss
@@ -67,7 +67,7 @@ $ct-include-alternative-responsive-containers: $ct-include-classes !default;
 // Series names and colors. This can be extended or customized as desired. Just add more series and colors.
 $ct-series-names: (a, b, c, d, e, f, g, h, i, j, k, l, m, n, o) !default;
 $ct-series-colors: (
-  #99cc66,
+  #22ddcc,
   #f05b4f,
   #f4c63d,
   #d17905,
