--- a/css/chartist.css
+++ b/css/chartist.css
@@ -159,9 +159,9 @@
   stroke-width: 60px; }
 
 .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut {
-  stroke: #99cc66; }
+  stroke: #22ddcc; }
 .ct-series-a .ct-slice-pie, .ct-series-a .ct-area {
-  fill: #99cc66; }
+  fill: #22ddcc; }
 
 .ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
   stroke: #f05b4f; }
