--- a/css/chartist.css
+++ b/css/chartist.css
@@ -1,6 +1,6 @@
 .ct-label {
-  fill: #666;
-  color: #666;
+  fill: #000;
+  color: #000;
   font-size: 0.75rem;
   line-height: 1; }
 
@@ -159,9 +159,9 @@
   stroke-width: 60px; }
 
 .ct-series-a .ct-point, .ct-series-a .ct-line, .ct-series-a .ct-bar, .ct-series-a .ct-slice-donut {
-  stroke: #22ddcc; }
+  stroke: #333399; }
 .ct-series-a .ct-slice-pie, .ct-series-a .ct-area {
-  fill: #22ddcc; }
+  fill: #333399; }
 
 .ct-series-b .ct-point, .ct-series-b .ct-line, .ct-series-b .ct-bar, .ct-series-b .ct-slice-donut {
   stroke: #f05b4f; }
